fix arch issues and inspections